@@ -24,32 +24,14 @@ compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 javadoc.options.encoding = "UTF-8"
 
-import org.apache.tools.ant.filters.EscapeUnicode
-
 tasks.withType(ProcessResources).each { task ->
     task.from(task.getSource()) {
         include '**/*.properties'
-        filter(EscapeUnicode)
+        filter(org.apache.tools.ant.filters.EscapeUnicode)
     }
 }
 
 task run(type: JavaExec, dependsOn: jar) {
     main = "-jar"
     args jar.archivePath
-}
-
-def java_home = System.getProperty("java.home")
-
-task link(type: Exec) {
-    dependsOn clean
-    dependsOn jar
-    workingDir 'build'
-
-    commandLine "${java_home}/bin/jlink",
-            '--no-header-files',
-            '--no-man-pages',
-            '--module-path', "${jar.archivePath}${File.pathSeparatorChar}${java_home}/jmods",
-            '--add-modules', 'org.glavo.viewer',
-            '--launcher', 'viewer=org.glavo.viewer/org.glavo.viewer.gui.Viewer',
-            '--output', "ClassViewer-${version}"
 }
